tdf#149555 sw: convert RANGE_IS_SECTION SwXTextRange if possible

The writerfilter import got an exception in
SectionPropertyMap::CloseSectionGroup() because XTextRangeToSwPaM()
can't handle RANGE_IS_SECTION SwXTextRange.

(regression from commit 7ab349296dac79dad3fec09f60348efcbb9ea17e)

Change-Id: I38b37fdec64f4699c0fa1a090c72a8676ff386a6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155026
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>